# automl-agent-system

./: .gitignore  PROJECT_REPORT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
automl_agent/: __init__.py  cli.py  harness.py  orchestrator.py  registry.py  types.py
automl_agent/agents/: __init__.py  base.py  data.py  deployment.py  evaluation.py  explainability.py  feature.py  hyperparameter.py  insight.py  model_search.py  monitoring.py
automl_agent/frontend/: __init__.py  app.js  index.html  styles.css
automl_agent/llm/: __init__.py  runpod.py  vllm.py
automl_agent/paper2code/: __init__.py  agent.py  claude_client.py  extractor.py  paper_loader.py  prompts.py
automl_agent/self_harness/: __init__.py  config.py  evidence.py  loop.py  memory.py  proposer.py
automl_agent/serving/: __init__.py  app.py  auth.py  config.py  model_store.py  schemas.py
docs/: DESIGN.md
examples/: harness.json  self_harness.json
tests/: test_agents.py  test_data_agent.py  test_frontend.py  test_harness.py  test_paper2code.py  test_pipeline.py  test_runpod_connector.py  test_self_harness.py  test_serving_auth.py  test_vllm_connector.py
