[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-agent-system"
version = "0.1.0"
description = "A multi-agent AutoML prototype inspired by the AutoML-Agent paper."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "authlib>=1.3",
  "fastapi>=0.110",
  "httpx>=0.27",
  "itsdangerous>=2.1",
  "joblib>=1.3",
  "numpy>=1.24",
  "optuna>=3.5",
  "pandas>=2.0",
  "pydantic>=2.6",
  "scikit-learn>=1.3",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
automl-agent = "automl_agent.cli:main"

[tool.setuptools.packages.find]
include = ["automl_agent*"]
